# a11y

./: .gitignore  CI_CD_DOCS.md  CrewAI WCAG 2.2 Overview.md  README.md  package.json  pyproject-old.toml  pyproject.toml  requirements.txt
.github/workflows/: wcag-testing.yml
db/: chroma.sqlite3
ressources/: wcag.json
src/: __init__.py  crew.py  logging_config.py  main.py  report_generator.py  wcag_reference_processor copy.py
src/a11y/: __init__.py  crew.py  logging_config.py  main.py  report_generator.py  utils.py
src/a11y/config/: agents.yaml  tasks.yaml
src/a11y/errors/: exceptions.py
src/a11y/templates/: report_styles.css
src/a11y/tools/: __init__.py  axe_core_tool.py  result_processor.py
src/a11y/wcag/: __init__.py  unified_result_processor.py  wcag_integration_manager.py  wcag_mapping_agent.py
src/config/: agents ausfuehlich.yaml  agents.yaml  tasks.yaml
src/templates/: report_styles.css
src/tools/: __init__.py  result_processor.py  wcag_analyzers.py  wcag_tools.py  wcag_tools_base.py  wcag_tools_execution.py
src/tools/pa11y/: __init__.py  config.py  results.py
src/wcag/: __init__.py  agent_based_wcag_mapper.py  unified_result_processor.py  wcag_analysis.py  wcag_analyzers.py  wcag_integration_manager.py  wcag_mapper.py  wcag_mapping_agent.py  wcag_reference_processor.py  wcag_task_executor.py
src/wcag/analyzers/: __init__.py  axe_analyzer.py  base_analyzer.py  html_analyzer.py  lighthouse_analyzer.py  pa11y_analyzer.py
tests/: test_crew.py  test_main.py  test_report_generator.py
tests/wcag/: test_wcag_reference_processor.py
