[project]
name = "a11y"
version = "0.1.0"
description = "WCAG 2.2 Testing System using CrewAI"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai>=0.14.0",
    "crewai-tools>=0.14.0",
    "beautifulsoup4>=4.12.2",
    "requests>=2.31.0",
    "pydantic>=2.5.2",
    "selenium>=4.15.2",
    "playwright>=1.40.0",
    "aiofiles>=24.1.0",
    "langtrace-python-sdk",
    "browserbase>=0.1.0",
    "nodejs>=0.1.1",
]

[tool.nodejs.dependencies]
"@axe-core/cli" = "^4.7.3"
"chromedriver" = "latest"
"puppeteer" = "latest"

[project.scripts]
run_crew = "src.a11y.main:main"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
